--- a/recipes/indomie.html
+++ b/recipes/indomie.html
@@ -7,21 +7,23 @@
 </head>
 <body>
     <h1>Indomie</h1>
-    <img src="" alt="Plate of Indomie">
-    <h2></h2>
-    <p></p>
+    <img src="./Images/indomie.jpg" alt="Plate of Indomie" height="auto" width="400">
+    <h2>Description</h2>
+    <p>Indomie is an instant noodle, usually made with eggs.</p>
     <h3>Ingredients</h3>
     <ul>
-        <li></li>
-        <li></li>
-        <li></li>
+        <li>Satchet of indomie</li>
+        <li>An onion (sliced)</li>
+        <li>Teaspoon of oil</li>
+        <li>Pepper</li>
     </ul>
     <h4>Steps</h4>
+    <span>There are actually different ways of making it but here's the simplest one.</span>
     <ol>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
+        <li>Boil some water in a pot, allow to boil.</li>
+        <li>Put in the sliced onions, oil and pepper.</li>
+        <li>Add the indomie and its spices, allow to cook.</li>
+        <li>Serve hot with boiled egg according to preference.</li>
     </ol>
     
     <a href="../index.html">Home</a>
