--- a/recipes/jollof_rice.html
+++ b/recipes/jollof_rice.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Jollof Rice</h1>
-    <img src="" alt="Plate of Jollof Rice">
+    <img src="./Images/jollof rice.webp" alt="Plate of Jollof Rice" height="auto" width="400">
     <h2>Description</h2>
     <p>Jollof rice is a popular West African dish made with rice, vegetables, and a flavorful tomato-based sauce.</p>
     <h3>Ingredients</h3>
