Add basic styling to the index.html, indomie.html and jollof_rice.html files.
The web pages look more presentable and readable.

--- a/recipes/jollof_rice.html
+++ b/recipes/jollof_rice.html
@@ -3,33 +3,50 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="recipes.css">
     <title>Jollof Rice</title>
 </head>
 <body>
-    <h1>Jollof Rice</h1>
-    <img src="./Images/jollof rice.webp" alt="Plate of Jollof Rice" height="auto" width="400">
-    <h2>Description</h2>
-    <p>Jollof rice is a popular West African dish made with rice, vegetables, and a flavorful tomato-based sauce.</p>
-    <h3>Ingredients</h3>
-    <ul>
-        <li>2 cups of rice</li>
-        <li>1 cup of vegetables (carrots, peas, bell peppers)</li>
-        <li>1 cup of tomato sauce</li>
-        <li>1 onion (chopped)</li>
-        <li>2 cloves of garlic (minced)</li>
-        <li>Salt and pepper to taste</li>
-    </ul>
-    <h4>Steps</h4>
-    <ol>
-        <li>Rinse the rice and set aside.</li>
-        <li>In a large pot, sauté the onions and garlic until fragrant.</li>
-        <li>Add the vegetables and cook for 5 minutes.</li>
-        <li>Add the tomato sauce and seasonings.</li>
-        <li>Add the rice and stir well to combine all ingredients.</li>
-        <li>Cover and cook on low heat for 20-25 minutes or until the rice is fully cooked.</li>
-    </ol>
+    <main>
 
-    <a href="../index.html">Home</a>
+        <h1>Jollof Rice</h1>
+        <div class="container">    
+            <div>
 
+                <img src="./Images/jollof rice.webp" alt="Plate of Jollof Rice" height="auto" width="400">
+                <h2>Description</h2>
+                <p>Jollof rice is a popular West African dish, <br>
+                    made with rice, vegetables, <br>
+                    and a flavorful tomato-based sauce.</p>
+            </div>
+        <div>
+
+            <h3>Ingredients</h3>
+            <ul>
+                <li>2 cups of rice</li>
+                <li>1 cup of vegetables (carrots, peas, bell peppers)</li>
+                <li>1 cup of tomato sauce</li>
+                <li>1 onion (chopped)</li>
+                <li>2 cloves of garlic (minced)</li>
+                <li>Salt and pepper to taste</li>
+            </ul>
+        </div>
+        <div>
+
+            <h3>Steps</h3>
+            <ol>
+                <li>Rinse the rice and set aside.</li>
+                <li>In a large pot, sauté the onions and garlic until fragrant.</li>
+                <li>Add the vegetables and cook for 5 minutes.</li>
+                <li>Add the tomato sauce and seasonings.</li>
+                <li>Add the rice and stir well to combine all ingredients.</li>
+                <li>Cover and cook on low heat for 20-25 minutes or until the rice is fully cooked.</li>
+            </ol>
+        </div>
+        
+        </div>
+        <a href="../index.html">Home</a>
+    </main>
+    
 </body>
 </html>
