--- a/index.html
+++ b/index.html
@@ -3,13 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Odin Recipes</title>
 </head>
 <body>
-    <h1>Odin Recipes</h1>
-    <ul>
-        <li><a href="./recipes/indomie.html">Indomie</a></li>
-        <li><a href="./recipes/jollof_rice.html">Jollof Rice</a></li>
-    </ul>
+    <main>
+
+        <h1>Odin Recipes</h1>
+        <ul>
+            <li><a href="./recipes/indomie.html">Indomie</a></li>
+            <li><a href="./recipes/jollof_rice.html">Jollof Rice</a></li>
+        </ul>
+    </main>
 </body>
 </html>
