--- a/recipes/indomie.html
+++ b/recipes/indomie.html
@@ -3,29 +3,39 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="recipes.css">
     <title>Indomie</title>
 </head>
 <body>
-    <h1>Indomie</h1>
-    <img src="./Images/indomie.jpg" alt="Plate of Indomie" height="auto" width="400">
-    <h2>Description</h2>
-    <p>Indomie is an instant noodle, usually made with eggs.</p>
-    <h3>Ingredients</h3>
-    <ul>
-        <li>Satchet of indomie</li>
-        <li>An onion (sliced)</li>
-        <li>Teaspoon of oil</li>
-        <li>Pepper</li>
-    </ul>
-    <h4>Steps</h4>
-    <span>There are actually different ways of making it but here's the simplest one.</span>
-    <ol>
-        <li>Boil some water in a pot, allow to boil.</li>
-        <li>Put in the sliced onions, oil and pepper.</li>
-        <li>Add the indomie and its spices, allow to cook.</li>
-        <li>Serve hot with boiled egg according to preference.</li>
-    </ol>
-    
-    <a href="../index.html">Home</a>
+    <main>
+        <h1>Indomie</h1>
+        <div class="container">
+            <div class="first-column">
+                <img src="./Images/indomie.jpg" alt="Plate of Indomie" height="auto" width="400">
+                <h2>Description</h2>
+                <p>Indomie is an instant noodle, usually made with eggs.</p>
+            </div>
+            <div class="second-column">
+                <h3>Ingredients</h3>
+                <ul>
+                    <li>Satchet of indomie</li>
+                    <li>An onion (sliced)</li>
+                    <li>Teaspoon of oil</li>
+                    <li>Pepper</li>
+                </ul>
+            </div>
+            <div class="third-column">
+                <h3>Steps</h3>
+                <ol>
+                    <li>Boil some water in a pot, allow to boil.</li>
+                    <li>Put in the sliced onions, oil and pepper.</li>
+                    <li>Add the indomie and its spices, allow to cook.</li>
+                    <li>Serve hot with boiled egg according to preference.</li>
+                </ol>
+        
+            </div>
+        </div>
+        <a href="../index.html">Home</a>
+    </main>
 </body>
 </html>
